# truffle

./: .cursorrules  .dockerignore  .gitignore  DOCKER.md  Dockerfile  README.md  SKILL_DATABASE_INTEGRATION_PLAN.md  docker-compose.yml  docker-entrypoint.sh  truffle.code-workspace
doc/: db-schema.sql  setup-db.sql  system-design.md  system-overview.md  time-decay-improvements.md
docker/: postgres-init.sql
expert-api/: config.py  main.py  pyproject.toml  run.sh
expert-api/database/: __init__.py
expert-api/models/: __init__.py
expert-api/services/: __init__.py
expert_api/: README.md  config.py  main.py  models.py  pyproject.toml  run.sh
expert_api/database/: __init__.py  models.py  session.py
expert_api/services/: __init__.py  storage_service.py
ingest_slack/: README.md  classifier.py  config.py  database.py  main.py  pyproject.toml  run.sh  taxonomy.py
ingest_slack/database/: operations.py  session.py
ingest_slack/processors/: classifier.py  message_processor.py
ingest_slack/scripts/: create_tables.py  import_taxonomy.py  migrate_taxonomy_to_files.py  reset_db.py
ingest_slack/services/: __init__.py  skill_service.py  slack_service.py  storage_service.py
ingest_slack/skills/: data.json  devops.json  engineering.json  marketing.json  sales.json  sentry.json
ingestor/: README.md  config.py  main.py  pyproject.toml  run.sh  test_api.sh
ingestor/database/: __init__.py  session.py
ingestor/processors/: __init__.py  classifier.py  message_processor.py  skill_matcher.py
ingestor/schedulers/: __init__.py  slack_ingestion.py
ingestor/scripts/: __init__.py
ingestor/services/: expert_search_service.py  queue_service.py  score_aggregation_service.py  skill_service.py  slack_service.py  storage_service.py
ingestor/skills/: customer_success.json  design.json  product.json
ingestor/workers/: __init__.py  message_worker.py
slack_bot/: README.md  __init__.py  config.py  main.py  models.py  pyproject.toml  run.sh
slack_bot/models/: __init__.py  api_models.py  slack_models.py
slack_bot/services/: __init__.py  event_processor.py  expert_api_client.py  query_parser.py  skill_cache_service.py  slack_event_parser.py
