[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expert_api"
version = "0"
requires-python = ">=3.13"

dependencies = [
    "asyncpg>=0.29.0",
    "fastapi>=0.104.0",
    "pydantic-settings>=2.1.0",
    "pydantic>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn[standard]>=0.24.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["expert_api"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.setuptools.packages.find]
include = ["services", "database", "models"]
