[project]
name = "ingest_slack"
version = "0"
requires-python = ">=3.13"

dependencies = [
    "aiohttp>=3.9",
    "ipdb>=0.13.13",
    "pudb>=2025.1",
    "ruff>=0.12.9",
    "slack-sdk>=3.36.0",
    "openai>=1.40.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["ingest_slack"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
